--- a/scss/_productive.scss
+++ b/scss/_productive.scss
@@ -4,19 +4,36 @@
   &__bg {
     background: $Light-Grayish-Blue;
     padding-top: 8rem;
-
+  }
+  .grid {
     @include breakpoint(medium) {
+      grid-template-columns: 1fr;
+      max-width: 100%;
     }
   }
 
   &__left {
-    display: grid;
-    grid-row-gap: 1.5rem;
-    width: 60rem;
-    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+
+    & > p,
+    & > h1 {
+      padding-bottom: 1.5rem;
+    }
+    @include breakpoint(medium) {
+      text-align: center;
+      margin: auto;
+      h1 {
+        font-size: 2rem;
+      }
+    }
+
     &--p {
       color: $Very-Dark-Blue;
       width: 53rem;
+      @include breakpoint(medium) {
+        width: 35rem;
+      }
     }
   }
   .quote {
